--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "Airline-Passenger-Satisfaction"]
 	path = Airline-Passenger-Satisfaction
 	url = https://github.com/IrtizaR/Customer-Airline-Satisfaction.git
-	ignore = dirty
+	active = .
 [submodule "Dr.-Semmelweis-and-the-discovery-of-handwashing"]
 	path = Dr.-Semmelweis-and-the-discovery-of-handwashing
 	url = https://github.com/IrtizaR/Dr.-Semmelweis-and-the-discovery-of-handwashing.git
-	ignore = dirty
+	active = .
